# cognizantaimlapr2026

day2/: pyproject.toml
day2/docs/source/: conf.py  index.rst  start.rst
day2/src/: app.py  start.py
day2/src/store/: customerstore.py
day3/: report.html
day3/conf/: logger_conf.py
day3/day3env/: pyvenv.cfg
day3/day3env/healthcare.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
day3/dayenv/: pyvenv.cfg
day3/src/: pyproject.toml
day3/src/exceptions/: patient_not_found_exception.py
day3/src/healthcare.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
day3/src/models/: appointment.py  doctor.py  patient.py  person.py  role.py
day3/src/stores/: doctorstore.py  patientstore.py
day3/src/utils/: app.py  main.py
day3/tests/: doctors.csv  patients.csv
day3/tests/contract_testing/: test_doctor.py  test_doctor_store.py  test_patient.py
