[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name="healthcare"

version="1.0.0"

description="Developing healthcare management application"

authors=[

    {name="Diya",email="devvdiyaa@gmail.com"}

]

requires-python=">=3.8"
 
#this is the production dependencies

dependencies=[

    "faker>=13.3.3"

]

#development dependencies

[project.optional-dependencies]

dev=[

  "pytest>=7.2.0",

  "pytest-html>=4.2.0",

  "pytest-cov>=3.0.0",

  "black>=23.0.0",

  "isort>=5.10.1",

  "sphinx>=5.0.0"

]

[tool.setuptools]
packages = ["models", "stores", "exceptions", "utils"]

[tool.black]

line-length=88

target-version=['py313']